--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,3 +1,7 @@
+{%extends "layouts/default.html"%}
+
+
+{%block content%}
 <h1>Home</h1>
 
 {{lucky}}
@@ -8,3 +12,5 @@
     <div>{{num}}</div>
 {% endfor %}
 </section>
+
+{%endblock%}
