--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,3 +1,4 @@
 {%extends "layouts/default.html"%} {%block content%}
 <h1>Articles</h1>
+<a href="{%url 'articles:new'%}">Create new article</a>
 {%endblock%}
