--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,4 +1,13 @@
 {%extends "layouts/default.html"%} {%block content%}
-<h1>Articles</h1>
-<a href="{%url 'articles:new'%}">Create new article</a>
-{%endblock%}
+
+<button class="btn btn-secondary btn-sm my-2">
+  <a href="{%url 'articles:new'%}">Create new article</a>
+</button>
+<hr />
+<h1 class="text-3xl mt-4">Articles</h1>
+{%for article in articles%}
+<article class="border my-4 p-3 rounded-xl border-gray-300">
+  <h2 class="text-xl">{{article.title}}</h2>
+  <p>{{article.content | truncatewords:15}}</p>
+</article>
+{%endfor%} {%endblock%}
