--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -1,4 +1,15 @@
 {%extends "layouts/default.html"%} {%block content%}
+<div class="flex flex-row gap-2">
+  <a class="btn btn-xs btn-accent" href="{%url 'articles:edit' article.id%}"
+    >Edit</a
+  >
+  <!-- a 標籤只有get，沒有delete，所以要用form包起來 -->
+  <form action="{%url 'articles:detail' article.id%}" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="_method" value="delete" />
+    <button class="btn btn-xs btn-error" href="">Delete</button>
+  </form>
+</div>
 
 <h1 class="text-3xl mt-4">{{article.title}}</h1>
 <article>{{article.content | linebreaksbr}}</article>
