--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,6 +1,6 @@
 {%extends "layouts/default.html"%} {%block content%}
 
-<button class="btn btn-secondary btn-sm my-2">
+<button class="btn btn-secondary btn-sm mb-2">
   <a href="{%url 'articles:new'%}">Create new article</a>
 </button>
 <hr />
