--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -9,6 +9,7 @@
       type="text/css"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
     <title>有名小站</title>
   </head>
   <body>
@@ -24,6 +25,8 @@
     </nav>
 
     <!-- 先挖洞 -->
-    <main class="container mx-auto">{%block content%} {%endblock%}</main>
+    <main class="container mx-auto mt-2">
+      {%include "shared/messages.html"%} {%block content%} {%endblock%}
+    </main>
   </body>
 </html>
