--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -10,6 +10,8 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
+    <script src="{%static 'scripts/app.js'%}"></script>
+    <link rel="stylesheet" href="{%static 'style/app.css'%}" />
     <title>有名小站</title>
   </head>
   <body>
