feat: add css and js files

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="nord">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,8 +10,9 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
+    {% load static %}
     <script src="{%static 'scripts/app.js'%}"></script>
-    <link rel="stylesheet" href="{%static 'style/app.css'%}" />
+    <link rel="stylesheet" href="{%static 'styles/app.css'%}" />
     <title>有名小站</title>
   </head>
   <body>
