feat: added is_published field and added forms

--- a/articles/templates/articles/new.html
+++ b/articles/templates/articles/new.html
@@ -28,6 +28,12 @@
       id="content"
     ></textarea>
     <div>
+        <input class="checkbox"
+        type="checkbox"
+        name="is_published"
+         /> Publish
+      </div>
+    <div>
       <button type="submit" class="btn btn-primary">Create</button>
     </div>
   </div>
