--- a/articles/templates/articles/edit.html
+++ b/articles/templates/articles/edit.html
@@ -3,7 +3,7 @@
   <h1 class="text-3xl mt-4">Edit Article</h1>
   <form action="{% url 'articles:detail' article.id%}" method="post">
     <input type="hidden" name="_method" value="patch" />
-    <div class="flex flex-col gap-2">
+    <div class="flex flex-col gap-4">
       <!-- 所以才需要在表單新增一個token -->
       <!-- 這一個只能擋跨站的，無法擋站內的 -->
       {% csrf_token %}
@@ -25,9 +25,16 @@
       {{article.content}}</textarea
       >
       <div>
+        <input class="checkbox"
+        type="checkbox"
+        name="is_published"
+        {% if article.is_published %} checked {% endif %} /> Publish
+      </div>
+
+      <div>
         <button type="submit" class="btn btn-primary">Save</button>
       </div>
     </div>
   </form>
 </div>
-{%endblock%}
+{% endblock %}
