--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -1,4 +1,6 @@
-{%extends "layouts/default.html"%} {%block content%}
+{%extends "layouts/default.html"%}
+
+{%block content%}
 <div class="flex flex-row gap-2">
   <a class="btn btn-sm btn-accent" href="{%url 'articles:edit' article.id%}"
     >Edit</a
@@ -11,6 +13,36 @@
   </form>
 </div>
 
-<h1 class="text-3xl mt-4 text-sky-700">{{article.title}}</h1>
-<article>{{article.content | linebreaksbr}}</article>
+<h1 class="text-3xl mt-4 text-primary mb-2">{{article.title}}</h1>
+<article class="mb-4">{{article.content | linebreaksbr}}</article>
+
+<hr>
+<h3 class="text-2xl">Comment Section</h3>
+
+<form action="{%url 'articles:create_comment' article.id%}" method="post" class="mt-4">
+  {% for field in comment_form%}
+  {% csrf_token %}
+  <!-- 也可以用這個單獨指定的方式去寫 -->
+  {{comment_form.content.label_tag}}
+  {{comment_form.content}}
+  {%endfor%}
+  <button class="btn btn-primary mt-4">Send</button>
+</form>
+
+<ul>
+  {%for comment in comments%}
+  <div class="comment border-1 border-gray-400 rounded-2xl mt-2 p-2 hover:shadow-sm flex flex-row items-center justify-between">
+    <div class="text"><li>{{comment.content}}</li>
+    <li class="text-xs text-gray-500">{{comment.created_at}}</li></div>
+    <form action="{%url 'comments:delete' comment.id%}" method="post">
+      {% csrf_token %}
+      <button class="btn btn-sm btn-error">Delete</button>
+    </form>
+    
+  </div>
+  
+  {%endfor%}
+</ul>
+
+
 {%endblock%}
