--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -35,7 +35,10 @@
 
     <!-- 先挖洞 -->
     <main class="container mx-auto mt-2">
-      {%include "shared/messages.html"%} {%block content%} {%endblock%}
+      {%include "shared/messages.html"%}
+      {%block content%}
+        
+      {%endblock%}
     </main>
   </body>
 </html>
