feat: user and register added

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -15,7 +15,7 @@
     <title>有名小站</title>
   </head>
   <body  hx-headers='{"X-CSRFToken":"{{csrf_token}}"}'>
-    <nav class="bg-accent py-4 px-8 shadow-sm">
+    <nav class="bg-accent py-4 px-8 shadow-sm flex flex-row justify-between">
       <ul class="flex flex-row w-full gap-2 menu w-56 [&_li>*]:rounded-box p-0">
         <li>
           <a href="{%url 'pages:home'%}">Home</a>
@@ -29,6 +29,12 @@
         <li>
           <a href="{%url 'pages:contact'%}">Contact Us</a>
         </li>
+      </ul>
+      <ul class="flex flex-row w-full gap-2 menu w-56 [&_li>*]:rounded-box p-0 items-center">
+        <li>
+          <a href="{%url 'sessions:new'%}">Login</a></li>
+        <li>
+          <a href="{%url 'users:new'%}">Register</a></li>
       </ul>
     </nav>
 
