--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -8,9 +8,13 @@
 {%for article in articles%}
 <article class="border my-4 p-3 rounded-xl border-gray-300">
   {%if article.is_published%} o {%else%} x {%endif%}
-  <h2 class="text-xl transition-all hover:text-accent duration-300">
-    <a href="{%url 'articles:detail' article.id%}">{{article.title}}</a>
-  </h2>
+  <div class="flex flex-col">
+    <h2 class="text-xl transition-all hover:text-accent duration-300">
+      <a href="{%url 'articles:detail' article.id%}">{{article.title}}</a>
+    </h2>
+    <p class="text-xs">{%if article.user != NULL %}By {{article.user}} {%endif%}</p>
+  </div>
+  
   <p>{{article.content | truncatewords:15}}</p>
 </article>
 {%endfor%} {%endblock%}
