--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -27,14 +27,16 @@
   {{comment_form.content.label_tag}}
   {{comment_form.content}}
 
-  <button class="btn btn-primary mt-4">Send</button>
+  <button :disabled="{{user.is_authenticated | yesno:'false,true'}}" class="btn btn-primary mt-4">Send</button>
 </form>
 
+<!-- 留言愈多，就會查資料庫愈多次，因為每一筆留言都要查詢作者（n+1 query） -->
 <ul id="comment-section">
   {%for c in comments%}
     <!-- 這樣設定不管在哪裡，他就可以獨立使用 -->
     <!-- only是你只能吃我給你的，你不能擁有別的變數，for example，我放{{comments}}，他就會吃不到 -->
     <!-- 這樣的設計代表，include裡面只能吃comment的變數 -->
+    <!-- user等於request.user，是簡寫 -->
     {%include "comments/comment.html" with comment=c user=user only%}
   {%endfor%}
 </ul>
