--- a/templates/ui/like_button.html
+++ b/templates/ui/like_button.html
@@ -1,3 +1,4 @@
+{%if user.is_authenticated%}
 <a href="#"
 hx-post="{%url 'articles:like' article.id%}"
 hx-swap="outerHTML" >
@@ -29,3 +30,5 @@ hx-swap="outerHTML" >
     </svg>
  {%endif%}
  </a>
+ {%else%}
+ {%endif%}
