feat:add braintree

--- a/pages/templates/pages/pricing.html
+++ b/pages/templates/pages/pricing.html
@@ -3,9 +3,9 @@
 <h1>方案</h1>
 
 <ul>
-    <li><a href="{%url 'payments:new'%}">Package A NT$10</a></li>
-    <li><a href="{%url 'payments:new'%}">Package B NT$50</a></li>
-    <li><a href="{%url 'payments:new'%}">Package C NT$100</a></li>
+    <li><a href="{%url 'payments:new'%}?plan=a">Package A NT$10</a></li>
+    <li><a href="{%url 'payments:new'%}?plan=b">Package B NT$50</a></li>
+    <li><a href="{%url 'payments:new'%}?plan=c">Package C NT$100</a></li>
 </ul>
 
 {%endblock%}
