feat: set dotenv

--- a/payments/templates/payments/new.html
+++ b/payments/templates/payments/new.html
@@ -1,7 +1,5 @@
 {%extends "layouts/default.html"%} {%block content%}
-<h1 class="text-3xl">付款：方案 {{plan|upper}}</h1>
-
-{{token}}
+<h1 class="text-3xl">付款：方案 {{plan|upper}} {{price}}元</h1>
 
 <!-- 為了把x-data搬到form，所以我需要一個div來裝我的刷卡單，所以用x-ref的方式來refer它 -->
 <!-- 為了把後端的資料送到前端，用data-set -->
@@ -10,16 +8,13 @@
   method="post"
   x-data="braintree_payment_form"
   data-token="{{token}}"
-  action=""
+  @submit.prevent="onSubmit"
 >
   <div x-ref="dropin"></div>
-  <button
-    :disabled="!ableToSubmit"
-    @submit.prevent="onSubmit"
-    class="btn btn-secondary"
-  >
-    付款
-  </button>
+  <input x-model="nonce" type="hidden" name="nonce" />
+  <input type="hidden" name="plan" value="{{plan}}" />
+  {% csrf_token %}
+  <button :disabled="!ableToSubmit" class="btn btn-secondary">付款</button>
 </form>
 
 {%endblock%}
